--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -293,14 +293,14 @@ H_B_14 : "Sᴏɴɢ"
 H_B_15 : "Sᴘᴇᴇᴅ"
 
 # Start
-S_B_1 : "🗒 Cᴏᴍᴍᴀɴᴅs"
-S_B_2 : "🔧 Sᴇᴛᴛɪɴɢs"
-S_B_3 : "📨 Sᴜᴘᴘᴏʀᴛ"
-S_B_4 : "📨 Cʜᴀɴɴᴇʟ"
-S_B_5 : "⚜ ᴄʟɪᴄᴋ ᴛᴏ ᴀᴅᴅ ɪɴ ᴍᴏʀᴇ ᴄʜᴀᴛs ⚜"
-S_B_6 : "💡 Gɪᴛ Rᴇᴘᴏ"
-S_B_7 : "👤 Oᴡɴᴇʀ"
-S_B_8 : "🔎 Hᴏᴡ Tᴏ Usᴇ? Cᴏᴍᴍᴀɴᴅ Mᴇɴᴜ"
+S_B_1 : "🗒 Command"
+S_B_2 : "🔧 Setting"
+S_B_3 : "💫 sᴜᴘᴘᴏʀᴛ 💫"
+S_B_4 : "🍬 ᴄʜᴀɴɴᴇʟ 🍬"
+S_B_5 : "✚ ᴀᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ɢʀᴏᴜᴘ"
+S_B_6 : "💡 Git Repo"
+S_B_7 : "✨ ᴏᴡɴᴇʀ ✨"
+S_B_8 : "🔎 ʜᴏᴡ ᴛᴏ ᴜꜱᴇ?ᴄᴏᴍᴍᴀɴᴅ ᴍᴇɴᴜ"
 
 #PlayMode
 PM_B_1 : "Dɪʀᴇᴄᴛ Pʟᴀʏ"
